# jj-review

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  check.py  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: check-jj-release-updates.yml  ci.yml  codeql.yml  release.yml
docs/: AGENTS.md  README.md  daily-workflow.md  mental-model.md  troubleshooting.md
docs/internals/: AGENTS.md  README.md  backlog.md  code-reviews.md  design.md  help-and-docs-plan.md  implementation-strategy.md  testing-philosophy.md  unit-test-review-checklist.md
docs/notes/: backlog.md  design.md  implementation-strategy.md  jj-github-stacked-review-design.md  testing-philosophy.md
scripts/: describe_with_claude.py  describe_with_codex.py  describe_with_prompt.py
src/jj_review/: bookmarks.py  bootstrap.py  cache.py  cli.py  command_ui.py  completion.py  concurrency.py  config.py  console.py  errors.py  formatting.py  github_helpers.py  github_resolution.py  intent.py  pull_request_references.py  review_inspection.py  stack_comments.py  stack_output.py  submit_recovery.py  system.py  ui.py
src/jj_review/commands/: __init__.py  _close_actions.py  abort.py  adopt.py  cleanup.py  close.py  close_orphan.py  doctor.py  import_.py  land.py  list_.py  relink.py  (+4 more)
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  submit_command_helpers.py  test_abort_command.py  test_bookmark_resolution.py  test_boundary_conditions.py  test_cleanup_command.py  test_close_command.py  test_doctor_command.py  test_fake_github.py  test_import_command.py  test_jj_stack.py  test_land_command.py  test_list_command.py  test_relink_command.py  test_status_command.py  test_submit_command.py  test_unlink_command.py
tests/support/: __init__.py  fake_github.py  integration_helpers.py  output_assertions.py  pytest_concurrency.py  revision_helpers.py
tests/unit/: entrypoint_test_helpers.py  test_bookmarks.py  test_bootstrap.py  test_cache.py  test_check.py  test_check_script.py  test_cleanup.py  test_cleanup_entrypoint.py  test_cli.py  test_cli_dispatch.py  test_close.py  test_close_entrypoint.py  test_command_entrypoints.py  test_command_ui.py  test_completion.py  test_concurrency.py  test_config.py  test_doctor_entrypoint.py  test_errors.py  test_github_client.py  test_github_resolution.py  test_import.py  test_import_entrypoint.py  test_import_helpers.py  test_intent.py  test_jj_client.py  test_land.py  test_land_entrypoint.py  test_list.py  test_pull_request_references.py  test_pull_request_refs.py  test_pytest_concurrency.py  test_relink_entrypoint.py  test_review_inspection.py  test_review_state.py  test_review_state_entrypoint.py  test_review_status.py  test_selection.py  test_status.py  test_status_entrypoint.py  (+7 more)
tools/: check_jj_release_updates.py  install-jj-release.sh
(+26 files in other folders)
