[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "jj-review"
version = "0.1.0"
description = "JJ-native stacked GitHub review tooling"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28.1,<0.29",
  "pydantic>=2.11.0,<3",
]

[project.scripts]
jj-review = "jj_review.cli:main"

[dependency-groups]
dev = [
  "fastapi>=0.116.0,<0.117",
  "pyrefly>=0.56.0,<0.57",
  "pytest>=8.4.0,<9",
  "pytest-cov>=6.2.0,<7",
  "pytest-randomly>=3.16.0,<4",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.12.0,<0.13",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["jj_review"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 98
src = ["src", "tests", "tools"]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pyrefly]
search_path = ["src", "."]

[tool.uv]
default-groups = ["dev"]
