[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "jj-review"
version = "0.1.0"
description = "JJ-native stacked GitHub review tooling"
readme = "README.md"
requires-python = ">=3.14"
keywords = ["jj", "jujutsu", "github", "pull-requests", "stacked-reviews"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "httpx>=0.28.1,<0.29",
  "pydantic>=2.11.0,<3",
  "rich>=14.1.0,<15",
  "tqdm>=4.67.1,<5",
]

[project.urls]
Homepage = "https://github.com/bos/jj-review"
Repository = "https://github.com/bos/jj-review"
Issues = "https://github.com/bos/jj-review/issues"

[project.scripts]
jj-review = "jj_review.cli:main"

[dependency-groups]
dev = [
  "fastapi>=0.116.0,<0.117",
  "pyrefly>=0.56.0,<0.57",
  "pytest>=8.4.0,<9",
  "pytest-cov>=6.2.0,<7",
  "pytest-randomly>=3.16.0,<4",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.12.0,<0.13",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["jj_review"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 98
src = ["src", "tests", "tools"]
target-version = "py314"

[tool.ruff.lint]
ignore = ["UP040", "UP047"]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyrefly]
search_path = ["src", "."]

[tool.hatch.build.targets.wheel]
packages = ["src/jj_review"]

[tool.uv]
default-groups = ["dev"]
